--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weather Dashboard</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Weather Dashboard</h1>
+    </header>
+    <main>
+        <section class="search-bar">
+            <input type="text" id="city-input" placeholder="Enter city name">
+            <button id="search-btn">Search</button>
+        </section>
+        <section class="weather-data">
+            <h2 id="city-name"></h2>
+            <p id="weather-desc"></p>
+            <p id="temp"></p>
+            <p id="humidity"></p>
+            <p id="wind-speed"></p>
+        </section>
+    </main>
+    <script src="script.js"></script>
+</body>
+</html>
